Started tests for highlight api routes.
