# backendSrc/models/note.ts
@@ -1,0 +1,6 @@
+export interface Note {
+    _id: string
+    note: string,
+    createdDateTime: string,
+    editedDateTime: string,
+}
